--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
 
-    width: 90%;
+    width: 100%;
     max-width: 960px;
     margin: auto;
     padding: 0;
@@ -34,8 +34,17 @@ header {
     grid-row: 2;
 
     padding: 1em;
+    padding-top: 0;
 
     color: #000;
+}
+
+.description > h3, h3.card-title {
+    color: #4b4b5a;
+    font-size: 1.5em;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    margin-top: 1rem;
 }
 
 .subjects, .hobbies {
@@ -120,16 +129,20 @@ header > h1 {
 #photo {
     display: block;
     float: right;
-    margin-left: 1em;
-    margin-bottom: 1em;
+    margin: 1rem 0 1rem 1rem;
     max-width: 30%;
     border-radius: 0.3em;
+}
+
+@media screen and (max-width: 300px) {
+    #photo {
+        display: none;
+    }
 }
 
 h3.card-title {
     text-align: left;
     margin: 1rem;
-    font-size: 1.5em;
 
     grid-column: 1 / span 2;
 }
@@ -177,6 +190,12 @@ h3.card-title {
 }
 
 .card > div > p {
+    margin: 0;
+}
+
+.card > div > ul {
+    -webkit-padding-start: 0;
+    padding-left: 1.6em;
     margin: 0;
 }
 
