--- a/main.css
+++ b/main.css
@@ -130,7 +130,11 @@ header > h1 {
     display: block;
     float: right;
     margin: 1rem 0 1rem 1rem;
+
+    width: 10em;
+    height: 10em;
     max-width: 30%;
+
     border-radius: 0.3em;
 }
 
